fix webapi client gen
